添加 MMP 服务器的初始实现，包括 Go 语言、GORM、PostgreSQL 和 SQLite 支持。新增 Docker 和 Docker Compose 配置，提供完整的 README 文档，定义了 JSON-RPC 接口和内存管理协议。

--- a/internal/server/static/index.html
+++ b/internal/server/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>内存管理系统</title>
+    <title>记忆管理系统</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -128,7 +128,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>内存管理系统</h1>
+        <h1>记忆管理系统</h1>
 
         <div class="tabs">
             <div class="tab active" data-tab="collections">集合</div>
@@ -138,7 +138,7 @@
         <div class="tab-content active" id="collections-tab">
             <div class="section">
                 <div class="card-header">
-                    <h2>内存集合</h2>
+                    <h2>记忆集合</h2>
                     <button class="btn btn-primary" id="add-collection-btn">添加集合</button>
                 </div>
                 <div id="collections-container">
@@ -151,7 +151,7 @@
         <div class="tab-content" id="nodes-tab">
             <div class="section">
                 <div class="card-header">
-                    <h2>内存节点</h2>
+                    <h2>记忆节点</h2>
                     <div>
                         <select id="collection-selector">
                             <option value="">选择集合...</option>
